# mplstyles

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  default.mplstyle  pyproject.toml  setup.cfg  setup.py
examples/: examples.py
mplstyles/: __init__.py  aps.mplstyle  aps1.5.mplstyle  aps2.mplstyle  colors.py  cycler.py  figures.mplstyle  plots.mplstyle
mplstyles/styles/: figure.mplstyle  plot.mplstyle
mplstyles/styles/journals/: aps.mplstyle  aps1.5.mplstyle  aps2.mplstyle  prb.mplstyle
