
# -- Project setup ---------------------------------------------------------------------

[options]
packages = find:
install_requires =
    numpy>=1.21
    matplotlib>=3.0.0
    setuptools>=60.0.0
    setuptools-scm[toml]>=4.0.0
python_requires = >=3.7
include_package_data = True
platforms = any
zip_safe = False

[options.extras_require]
build =
    wheel>=0.37.0
test =
    pytest-cov>=3.0.0


# -- Tools -----------------------------------------------------------------------------

[aliases]
test=pytest


[pydocstyle]
add-ignore = D105  # ignore undocumented dunder methods like ``__str__`


[flake8]
max-line-length = 88
ignore = D203
extend-ignore = E203, W503
per-file-ignores = __init__.py:F401
exclude =
    .git,
    .idea,
    __pycache__,
    build,
    dist,
    _version.py,
